Login, role_admin, role_user, login

--- a/app/Resources/views/Todo/edit_task.html.twig
+++ b/app/Resources/views/Todo/edit_task.html.twig
@@ -111,6 +111,9 @@
                 <table id="tabla_datatable" class="display responsive nowrap" cellspacing="0" width="100%">
                 <thead>
                 <tr>
+                  {% if  app.user.roles[0]  == 'ROLE_ADMIN' %}
+                    <th>{% trans %}usuario{% endtrans %}</th>
+                  {% endif %}                
                   <th>{% trans %}nombre{% endtrans %}</th>
                   <th>{% trans %}fecha.creacion{% endtrans %}</th>
                   <th>{% trans %}fecha.tope{% endtrans %}</th>
@@ -122,6 +125,9 @@
                 {% for task in tasks %}
 
                   <tr>
+                        {% if  app.user.roles[0]  == 'ROLE_ADMIN' %}
+                          <td>{{ task.user.username }}</td>
+                        {% endif %}                    
                         <td>{{ task.nombre }}</td>
                         <td>{{ task.fechaCreacion|date("m/d/Y h:m") }}</td>
                         <td>{{ task.fechaTope|date("m/d/Y h:m") }}</td>
@@ -150,9 +156,6 @@
                               </a>
 
                               <a href="#">
-                               <button type="button" class="btn btn-link btn-xs " >
-                                      <i class="fa fa-trash fa-2x" style="color: gray;"></i>
-                                </button>
                                 <button type="button" class="btn btn-link btn-xs eliminar" data-toggle="modal" data-target="#myModal" id="{{ task.id }}" name="{{task.nombre}}">
                                       <i class="fa fa-trash fa-2x" style="color: red;"></i>
                                 </button>
@@ -165,6 +168,9 @@
                 </tbody>
                 <tfoot>
                 <tr>
+                  {% if  app.user.roles[0]  == 'ROLE_ADMIN' %}
+                    <th>{% trans %}usuario{% endtrans %}</th>
+                  {% endif %}
                   <th>{% trans %}nombre{% endtrans %}</th>
                   <th>{% trans %}fecha.creacion{% endtrans %}</th>
                   <th>{% trans %}fecha.tope{% endtrans %}</th>
