--- a/app/Resources/views/barra_superior.html.twig
+++ b/app/Resources/views/barra_superior.html.twig
@@ -12,7 +12,7 @@
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href=""><i class="fa fa-sign-out pull-right"></i> {% trans %}cerrar.sesion{% endtrans %}</a></li>
+                    <li><a href="{{ path('logout') }}"><i class="fa fa-sign-out pull-right"></i> {% trans %}cerrar.sesion{% endtrans %}</a></li>
                   </ul>
                 </li>
                 {% set urlActual =  path(app.request.attributes.get('_route'),  app.request.attributes.get('_route_params'))  %}
