--- a/app/Resources/views/Usuario/edit_user.html.twig
+++ b/app/Resources/views/Usuario/edit_user.html.twig
@@ -74,6 +74,11 @@
 							 {{ form_widget(form.apellidos, { 'attr': {'class': 'form-control'} }) }}
 							<span class="text-danger">{{ form_errors(form.apellidos)}}</span>
 						</div>
+            <div class="form-group">
+              {{ form_label(form.email)}}
+               {{ form_widget(form.email, { 'attr': {'class': 'form-control'} }) }}
+              <span class="text-danger">{{ form_errors(form.email)}}</span>
+            </div>            
 
 
               {% set roles = {  ROLE_USER: 'user',   ROLE_ADMIN: 'administrador' } %}
