--- a/app/Resources/views/barra_superior.html.twig
+++ b/app/Resources/views/barra_superior.html.twig
@@ -8,7 +8,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="{{ asset('imagenes/avatar.jpeg') }}" alt="">{#{ app.user.nombre }#} {#{ app.user.apellidos }#}
+                    <img src="{{ asset('imagenes/avatar.jpeg') }}" alt="">{{ app.user.nombre }} {{ app.user.apellidos }}
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
